--- a/Feel/Pages/Home.razor
+++ b/Feel/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/home"
-<div>Ciao sono la home aggiornata</div>
+<div>Ciao sono la home zsgsdfgdfgd</div>
 <NavMenu />
 Questa è l'icona sola
 <span class="text-dark"><i class="bi bi-house-door-fill"></i></span>
