--- a/Feel/Layout/NavMenu.razor
+++ b/Feel/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="@($"navmenu bg-{NavMenuColor}-navmenu-sfondo")">
+﻿<div class="@($"navmenu bg-{MainTheme}-navmenu-sfondo")">
     @if(NavMenuItems is not null)
     {
         @foreach (var element in NavMenuItems)
