tabella ci siamo

--- a/Feel/Layout/NavMenu.razor
+++ b/Feel/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="@($"navmenu bg-{MainTheme}-navmenu-sfondo")">
+﻿@* <div class="@($"navmenu bg-{MainTheme}-navmenu-sfondo")">
     @if(NavMenuItems is not null)
     {
         @foreach (var element in NavMenuItems)
@@ -6,4 +6,4 @@
         <Icon Element="@element.Icon" Pointer="true" Color="@element.Color"/>
         }
     }
-</div>
+</div> *@
