--- a/Feel/wwwroot/css/partials/_mainLayout.scss
+++ b/Feel/wwwroot/css/partials/_mainLayout.scss
@@ -11,35 +11,21 @@
         width: 100%;
         height: 100%;
         z-index: 11;
-        background-image: linear-gradient(to top, white, transparent), url("/css/images/bg.jpeg");
+        background-image: linear-gradient(to top, black, transparent), url("/css/images/bg.jpeg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         mix-blend-mode: overlay;
         pointer-events: none;
+        opacity: 0.9;
     }
 
     & .main-section {
         position: relative;
         z-index: 12;
         width: 100%;
-        height: calc(100vh - 3.5rem);
+        height: 100%;
         padding: 1.2rem;
         overflow: auto;
-    }
-
-    & .navmenu {
-        position: relative;
-        z-index: 12;
-        width: 100%;
-        height: 3.5rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        & span {
-            font-size: 1.5rem;
-            line-height: 0;
-        }
     }
 }
