--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -136,100 +136,21 @@ main .main-gradient {
   width: 100%;
   height: 100%;
   z-index: 11;
-  background-image: linear-gradient(to top, white, transparent), url("/css/images/bg.jpeg");
+  background-image: linear-gradient(to top, black, transparent), url("/css/images/bg.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   mix-blend-mode: overlay;
   pointer-events: none;
+  opacity: 0.9;
 }
 main .main-section {
   position: relative;
   z-index: 12;
   width: 100%;
-  height: calc(100vh - 3.5rem);
+  height: 100%;
   padding: 1.2rem;
   overflow: auto;
-}
-main .navmenu {
-  position: relative;
-  z-index: 12;
-  width: 100%;
-  height: 3.5rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-main .navmenu span {
-  font-size: 1.5rem;
-  line-height: 0;
-}
-
-.progress-card-box {
-  border-radius: 20px;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-.progress-card-box .progress-card {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.progress-card-box .progress-card .progress-card-title {
-  font-size: 0.7rem;
-  padding: 0.5rem;
-  text-align: center;
-  font-weight: 700;
-  width: 100%;
-}
-.progress-card-box .progress-card .progress-card-body {
-  background-color: #F5F5F0;
-  padding: 1rem;
-  width: 95%;
-  height: 100%;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  gap: 1rem;
-}
-.progress-card-box .progress-card .progress-card-body .pill-box {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1.2rem;
-}
-.progress-card-box .progress-card .progress-card-body .pill-box .data-box {
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
-  line-height: 0;
-  gap: 1rem;
-}
-.progress-card-box .progress-card .progress-card-body .pill-box .progress-card-bg-bar {
-  background-color: #F5F5F0;
-  width: 100%;
-  height: 100%;
-  max-width: 40px;
-  min-height: 50px;
-  outline: 2px solid #B4CDBE;
-  outline-offset: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  overflow: hidden;
-}
-.progress-card-box .progress-card .progress-card-body .pill-box .progress-card-bg-bar .progress-bar-fill {
-  width: 100%;
-  height: 70%;
 }
 
 /*!
