--- a/Feel/Components/ProgressCard.razor
+++ b/Feel/Components/ProgressCard.razor
@@ -1,33 +1,49 @@
 ﻿
     <div class="container-fluid">
-        <div class="row row-cols-2">
+        <div class="row gap-3">
 
-            <div class="col">
+            <div class="col-12">          
+        <div class="row progress-bar-section">
+            <div class="col-3 progress-bar-bottle-container">
+                <div class="@($"progress-card bg-{MainTheme}-light")">
+                <div class="bottle rounded-pill">
+                    <span class="bottle-fill"></span>
+                </div>
+                <span class="@($"percentuale text-{MainTheme}-primary")">52%</span>
+                </div>
+            </div>
+            <div class="col-8 progress-bar-recap">
+            <span>Risparmio</span>
+            <span>Risparmiare 100 euro</span>
+            <span class="@($"text-{MainTheme}-primary")">Scadenza: <strong>17/01/2025</strong></span>
+            </div>
+            <div class="col-1 go-to-details">
+                <span class="@($"text-{MainTheme}-primary")">></span>
+            </div>
+        </div>
+            </div>
 
-
-            <div class="@($"progress-card-box bg-{MainTheme}-progress-card-sfondo shadow-sm")">
-                <div class="progress-card">
-                    <h2 class="@($"progress-card-title m-0 text-{MainTheme}-progress-card-titolo-testo")">@Localizer[ResourceLanguage.Test]</h2>
-                    <div class="progress-card-body">
-                        <div class="pill-box">
-                            <div class="progress-card-bg-bar rounded-pill">
-                                <span class="progress-bar-fill bg-success"></span>
-                            </div>
+        <div class="col-12">
+            <div class="row progress-bar-section">
+                <div class="col-3 progress-bar-bottle-container">
+                    <div class="@($"progress-card bg-{MainTheme}-light")">
+                        <div class="bottle rounded-pill">
+                            <span class="bottle-fill"></span>
                         </div>
-                        <div class="pill-box">
-                            <div class="progress-card-bg-bar rounded-pill">
-                                <span class="progress-bar-fill bg-warning"></span>
-                            </div>
-                            <div class="@($"data-box progress-card-title m-0 text-{MainTheme}-progress-card-titolo-testo")">
-                                <span>10/05</span>
-                                <span>2025</span>
-                            </div>
-                        </div>
+                        <span class="@($"percentuale text-{MainTheme}-primary")">52%</span>
                     </div>
-                    <h3 class="@($"progress-card-title m-0 text-{MainTheme}-progress-card-titolo-testo")">90%</h3>
+                </div>
+                <div class="col-8 progress-bar-recap">
+                    <span>Risparmio</span>
+                    <span>Risparmiare 100 euro</span>
+                    <span class="@($"text-{MainTheme}-primary")">Scadenza: <strong>17/01/2025</strong></span>
+                </div>
+                <div class="col-1 go-to-details">
+                    <span class="@($"text-{MainTheme}-primary")">></span>
                 </div>
             </div>
         </div>
+
         </div>
     </div>
 
