--- a/Feel/wwwroot/css/partials/_progressCard.scss
+++ b/Feel/wwwroot/css/partials/_progressCard.scss
@@ -1,1 +1,92 @@
-﻿
+﻿$font-categoria: 0.7rem;
+$font-titolo: 0.8rem;
+$font-scadenza: 0.7rem;
+$font-percentuale: 0.7rem;
+$font-freccia-scadenza: 1.2rem;
+
+.progress-bar-section {
+    backdrop-filter: blur(2px);
+    background-color: rgba(150, 150, 150, 0.1);
+    border: 1px solid $light-gray;
+    box-shadow: $custom-shadow;
+
+    & .progress-bar-bottle-container {
+        padding: 0.6rem;
+
+        & .progress-card {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            box-shadow: $custom-shadow;
+            position: relative;
+
+            & .bottle {
+                position: absolute;
+                background-color: rgba($acqua, 0.5);
+                outline: 2px solid white;
+                outline-offset: 3px;
+                width: 30px;
+                height: 60px;
+                left: 50%;
+                bottom: 1.6rem;
+                transform: translateX(-50%);
+                display: flex;
+                justify-content: center;
+                align-items: end;
+                overflow: hidden;
+
+                & .bottle-fill {
+                    width: 100%;
+                    height: 50%;
+                    background-color: red;
+                    opacity: 0.9;
+                }
+            }
+
+            & .percentuale {
+                font-size: $font-percentuale;
+                font-weight: 600;
+                position: absolute;
+                left: 50%;
+                bottom: 0;
+                transform: translateX(-50%);
+            }
+        }
+    }
+
+    & .progress-bar-recap {
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+
+        & span {
+            &:nth-child(1) {
+                font-size: $font-categoria;
+                color: $secondary;
+            }
+
+            &:nth-child(2) {
+                font-size: $font-titolo;
+                font-weight: 600;
+            }
+
+            &:nth-child(3) {
+                font-size: $font-scadenza;
+            }
+        }
+    }
+
+    & .go-to-details {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: $font-freccia-scadenza;
+        font-weight: 500;
+
+        &:active {
+            background-color: rgba(100, 100, 100, 0.2);
+            color: white !important;
+        }
+    }
+}
