--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -130,9 +130,10 @@ main {
   z-index: 10;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 main .main-gradient {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: 11;
@@ -150,7 +151,7 @@ main .main-section {
   width: 100%;
   height: 100%;
   padding: 1.2rem;
-  overflow: auto;
+  margin-bottom: 20rem;
 }
 
 .progress-bar-section {
