--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -150,7 +150,7 @@ main .main-section {
   z-index: 12;
   width: 100%;
   height: 100%;
-  padding: 1.2rem;
+  padding: 0.5rem;
   margin-bottom: 20rem;
 }
 
@@ -228,6 +228,24 @@ main .main-section {
   color: white !important;
 }
 
+@media only screen and (max-width: 991px) {
+  .recap-box {
+    padding-inline: 1.5rem !important;
+    padding-block: 0.5rem !important;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .recap-box {
+    padding-inline: 1.5rem !important;
+    padding-block: 0.5rem !important;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .recap-box {
+    padding-inline: 1.5rem !important;
+    padding-block: 0.5rem !important;
+  }
+}
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
