--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -246,6 +246,62 @@ main .main-section {
     padding-block: 0.5rem !important;
   }
 }
+.custom-offcanvasdetails-backdrop {
+  position: fixed;
+  z-index: 15;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  display: none;
+}
+.custom-offcanvasdetails-backdrop .custom-offcanvasdetails {
+  position: fixed;
+  width: 100%;
+  height: 80%;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid #6c757d;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  transform: translateY(-100%);
+  z-index: 16;
+  opacity: 0;
+}
+
+.custom-offcanvasdetails-backdrop.show {
+  display: block;
+  animation: appear 300ms ease-in-out forwards;
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.custom-offcanvasdetails.show {
+  animation: appear-translate 500ms ease-in-out forwards;
+}
+@keyframes appear-translate {
+  from {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
