--- a/Feel/wwwroot/css/partials/_mainLayout.scss
+++ b/Feel/wwwroot/css/partials/_mainLayout.scss
@@ -1,4 +1,4 @@
-﻿// z-index più alto: 15 per offcanvas
+﻿// z-index più alto: 20 per offcanvas
 
 main {
     position: relative;
@@ -29,6 +29,10 @@ main {
         width: 100%;
         height: 100%;
         padding: 0.5rem;
-        margin-bottom: 20rem;
+        margin-bottom: 17rem;
+
+        @include media-query($from-tablet) {
+            margin-bottom: 20rem;
+        }
     }
 }
