--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -151,7 +151,12 @@ main .main-section {
   width: 100%;
   height: 100%;
   padding: 0.5rem;
-  margin-bottom: 20rem;
+  margin-bottom: 17rem;
+}
+@media only screen and (min-width: 577px) {
+  main .main-section {
+    margin-bottom: 20rem;
+  }
 }
 
 .progress-bar-section {
@@ -248,7 +253,7 @@ main .main-section {
 }
 .custom-offcanvasdetails-backdrop {
   position: fixed;
-  z-index: 15;
+  z-index: 20;
   left: 0;
   top: 0;
   width: 100%;
@@ -299,6 +304,247 @@ main .main-section {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+.assistente {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  max-width: 250px;
+}
+@media only screen and (min-width: 577px) {
+  .assistente {
+    max-width: 300px;
+  }
+}
+
+.assistente-aggiungi-obiettivo.giulio {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-18rem) translateX(3rem) rotate(-60deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-aggiungi-obiettivo.giulio .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-aggiungi-obiettivo.giulio {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-21rem) translateX(3rem) rotate(-60deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-aggiungi-obiettivo.giulio .message-text {
+    font-size: 0.8rem;
+  }
+}
+.assistente-aggiungi-obiettivo.kitty {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-13rem) translateX(0) rotate(-60deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-aggiungi-obiettivo.kitty .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-aggiungi-obiettivo.kitty {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-17rem) translateX(0) rotate(-65deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-aggiungi-obiettivo.kitty .message-text {
+    font-size: 0.8rem;
+  }
+}
+
+.assistente-cambia-tema.giulio {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-14rem) translateX(9rem) rotate(-40deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-cambia-tema.giulio .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-cambia-tema.giulio {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-17rem) translateX(10rem) rotate(-40deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-cambia-tema.giulio .message-text {
+    font-size: 0.8rem;
+  }
+}
+.assistente-cambia-tema.kitty {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-10rem) translateX(6rem) rotate(-40deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-cambia-tema.kitty .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-cambia-tema.kitty {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-13rem) translateX(6rem) rotate(-40deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-cambia-tema.kitty .message-text {
+    font-size: 0.8rem;
+  }
+}
+
+.assistente-about.giulio {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-9rem) translateX(11rem) rotate(-20deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-about.giulio .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-about.giulio {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-11rem) translateX(13rem) rotate(-20deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-about.giulio .message-text {
+    font-size: 0.8rem;
+  }
+}
+.assistente-about.kitty {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-7rem) translateX(10rem) rotate(-20deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-about.kitty .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-about.kitty {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-9rem) translateX(10rem) rotate(-20deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-about.kitty .message-text {
+    font-size: 0.8rem;
+  }
+}
+
+.assistente-area-utente.giulio {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-2rem) translateX(12rem) rotate(10deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-area-utente.giulio .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-area-utente.giulio {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-4rem) translateX(15rem) rotate(10deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-area-utente.giulio .message-text {
+    font-size: 0.8rem;
+  }
+}
+.assistente-area-utente.kitty {
+  position: fixed;
+  z-index: 14;
+  bottom: 0;
+  left: 0;
+  transform: translateY(-1rem) translateX(10rem) rotate(10deg);
+  border: 1px solid red;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+}
+.assistente-area-utente.kitty .message-text {
+  font-size: 0.8rem;
+}
+@media only screen and (min-width: 577px) {
+  .assistente-area-utente.kitty {
+    position: fixed;
+    z-index: 14;
+    bottom: 0;
+    left: 0;
+    transform: translateY(-2rem) translateX(12rem) rotate(10deg);
+    border: 1px solid red;
+    padding: 1rem 1.5rem;
+    border-radius: 50px;
+  }
+  .assistente-area-utente.kitty .message-text {
+    font-size: 0.8rem;
   }
 }
 
