--- a/Feel/Components/AssistantMessage.razor
+++ b/Feel/Components/AssistantMessage.razor
@@ -1,3 +1,3 @@
-﻿<div class="@($"assistente-{ActionClass} {CssClass}")" @onclick="OnActionClick">
-<span class="message-text">@ActionText</span>
+﻿<div class="@($"assistente-{ActionClass} {CssClass} bg-{MainTheme}-messaggi-bg")" @onclick="OnActionClick">
+<span class="@($"message-text text-{MainTheme}-messaggi-testo")">@ActionText</span>
 </div>
