--- a/Feel/Components/Assistente.razor
+++ b/Feel/Components/Assistente.razor
@@ -1,5 +1,9 @@
-﻿<AssistantMessage Action="AssistantMessageEnum.AggiungiObiettivo" CssClass="@($"{WhoIs} {ShowMessages}")" />
+﻿<AssistantMessage Action="AssistantMessageEnum.AggiungiObiettivo" CssClass="@($"{WhoIs} {ShowMessages}")" OnActionClick="AddObiettivoPopUp"/>
 <AssistantMessage Action="AssistantMessageEnum.CambiaTema" CssClass="@($"{WhoIs} {ShowMessages}")" />
 <AssistantMessage Action="AssistantMessageEnum.AreaUtente" CssClass="@($"{WhoIs} {ShowMessages}")" />
 <AssistantMessage Action="AssistantMessageEnum.About" CssClass="@($"{WhoIs} {ShowMessages}")" />
 <img class="assistente" src="@($"/css/images/Assistenti/{IsSelectedClass}-{AssistenteNome}")" @onclick="PadOnAssistant"/>
+
+<OffCanvas @ref="_offCanvas">
+    <AddObiettivo />
+</OffCanvas>
