--- a/Feel/wwwroot/css/partials/_assistente.scss
+++ b/Feel/wwwroot/css/partials/_assistente.scss
@@ -10,12 +10,12 @@
     }
 }
 
-@mixin assistente($translateY, $translateX, $rotate) {
+@mixin assistente($translateY, $translateX, $rotate, $scale: 1) {
     position: fixed;
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY($translateY) translateX($translateX) rotate($rotate);
+    transform: translateY($translateY) translateX($translateX) rotate($rotate) scale($scale);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: $custom-shadow;
@@ -67,20 +67,20 @@
 .assistente-cambia-tema {
 
     &.giulio {
-        @include assistente(-14rem, 9rem, -40deg);
+        @include assistente(-14rem, 9rem, -40deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-17rem, 10rem, -40deg);
+            @include assistente(-17rem, 10rem, -40deg, 0.9);
         }
     }
 
 
 
     &.kitty {
-        @include assistente(-10rem, 6rem, -40deg);
+        @include assistente(-10rem, 6rem, -40deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-13rem, 6rem, -40deg);
+            @include assistente(-13rem, 6rem, -40deg, 0.9);
         }
     }
 }
@@ -108,18 +108,18 @@
 .assistente-area-utente {
 
     &.giulio {
-        @include assistente(-2rem, 12rem, 10deg);
+        @include assistente(-2rem, 12rem, 10deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-4rem, 15rem, 10deg);
+            @include assistente(-4rem, 15rem, 10deg, 0.9);
         }
     }
 
     &.kitty {
-        @include assistente(-1rem, 10rem, 10deg);
+        @include assistente(-1rem, 10rem, 10deg, 0.9);
 
         @include media-query($from-tablet) {
-            @include assistente(-2rem, 12rem, 10deg);
+            @include assistente(-2rem, 12rem, 10deg, 0.9);
         }
     }
 }
