--- a/Feel/wwwroot/css/partials/_offcanvas.scss
+++ b/Feel/wwwroot/css/partials/_offcanvas.scss
@@ -12,7 +12,7 @@
     & .custom-offcanvasdetails {
         position: fixed;
         width: 100%;
-        height: 80%;
+        height: 68%;
         top: 0;
         left: 0;
         border-bottom: 1px solid $secondary;
@@ -22,6 +22,10 @@
         transform: translateY(-100%);
         z-index: 16;
         opacity: 0;
+        border-radius: 0 0 10% 10%;
+        @include media-query($from-tablet) {
+            height: 60%;
+        }
     }
 }
 
