--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -265,7 +265,7 @@ main .main-section {
 .custom-offcanvasdetails-backdrop .custom-offcanvasdetails {
   position: fixed;
   width: 100%;
-  height: 80%;
+  height: 68%;
   top: 0;
   left: 0;
   border-bottom: 1px solid #6c757d;
@@ -275,6 +275,12 @@ main .main-section {
   transform: translateY(-100%);
   z-index: 16;
   opacity: 0;
+  border-radius: 0 0 10% 10%;
+}
+@media only screen and (min-width: 577px) {
+  .custom-offcanvasdetails-backdrop .custom-offcanvasdetails {
+    height: 60%;
+  }
 }
 
 .custom-offcanvasdetails-backdrop.show {
@@ -325,7 +331,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-18rem) translateX(3rem) rotate(-60deg);
+  transform: translateY(-18rem) translateX(3rem) rotate(-60deg) scale(1);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -361,7 +367,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-21rem) translateX(3rem) rotate(-60deg);
+    transform: translateY(-21rem) translateX(3rem) rotate(-60deg) scale(1);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -397,7 +403,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-13rem) translateX(0) rotate(-60deg);
+  transform: translateY(-13rem) translateX(0) rotate(-60deg) scale(1);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -433,7 +439,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-17rem) translateX(0) rotate(-65deg);
+    transform: translateY(-17rem) translateX(0) rotate(-65deg) scale(1);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -470,7 +476,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-14rem) translateX(9rem) rotate(-40deg);
+  transform: translateY(-14rem) translateX(9rem) rotate(-40deg) scale(0.9);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -506,7 +512,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-17rem) translateX(10rem) rotate(-40deg);
+    transform: translateY(-17rem) translateX(10rem) rotate(-40deg) scale(0.9);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -542,7 +548,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-10rem) translateX(6rem) rotate(-40deg);
+  transform: translateY(-10rem) translateX(6rem) rotate(-40deg) scale(0.9);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -578,7 +584,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-13rem) translateX(6rem) rotate(-40deg);
+    transform: translateY(-13rem) translateX(6rem) rotate(-40deg) scale(0.9);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -615,7 +621,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-9rem) translateX(11rem) rotate(-20deg);
+  transform: translateY(-9rem) translateX(11rem) rotate(-20deg) scale(1);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -651,7 +657,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-11rem) translateX(13rem) rotate(-20deg);
+    transform: translateY(-11rem) translateX(13rem) rotate(-20deg) scale(1);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -687,7 +693,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-7rem) translateX(10rem) rotate(-20deg);
+  transform: translateY(-7rem) translateX(10rem) rotate(-20deg) scale(1);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -723,7 +729,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-9rem) translateX(10rem) rotate(-20deg);
+    transform: translateY(-9rem) translateX(10rem) rotate(-20deg) scale(1);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -760,7 +766,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-2rem) translateX(12rem) rotate(10deg);
+  transform: translateY(-2rem) translateX(12rem) rotate(10deg) scale(0.9);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -796,7 +802,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-4rem) translateX(15rem) rotate(10deg);
+    transform: translateY(-4rem) translateX(15rem) rotate(10deg) scale(0.9);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -832,7 +838,7 @@ main .main-section {
   z-index: 15;
   bottom: 0;
   left: 0;
-  transform: translateY(-1rem) translateX(10rem) rotate(10deg);
+  transform: translateY(-1rem) translateX(10rem) rotate(10deg) scale(0.9);
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
@@ -868,7 +874,7 @@ main .main-section {
     z-index: 15;
     bottom: 0;
     left: 0;
-    transform: translateY(-2rem) translateX(12rem) rotate(10deg);
+    transform: translateY(-2rem) translateX(12rem) rotate(10deg) scale(0.9);
     padding: 1rem 1.5rem;
     border-radius: 50px;
     box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
