--- a/Feel/Components/OffCanvas.razor
+++ b/Feel/Components/OffCanvas.razor
@@ -1,6 +1,6 @@
 ﻿<div class="@($"custom-offcanvasdetails-backdrop {IsOpenClass}")" @onclick="Close">
-            <div class="@($"custom-offcanvasdetails bg-{MainTheme}-primary {IsOpenClass}")">
-                @ChildContent
-        </div>
+    <div class="@($"custom-offcanvasdetails bg-{MainTheme}-offcanvas-bg {IsOpenClass}")" @onclick:stopPropagation>
+        @ChildContent
     </div>
-    
+</div>
+
