--- a/Feel/Components/ProgressCard.razor
+++ b/Feel/Components/ProgressCard.razor
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="col-7 progress-bar-recap">
-            <span>@TraduzioneCategorie.Traduzione(obiettivo.Categoria, Localizer)</span>
+            <span>@HelperTraduzione.Traduzione(obiettivo.Categoria, Localizer)</span>
             <span>@obiettivo.Titolo</span>
             <span class="@($"text-{MainTheme}-primary")">@Localizer[ResourceLanguage.Scadenza]: <strong>@obiettivo.Scadenza</strong></span>
             </div>
