--- a/Feel/_Imports.razor
+++ b/Feel/_Imports.razor
@@ -16,3 +16,4 @@
 @inject IStringLocalizer<ResourceLanguage> Localizer
 @using Feel.Shared.Helper
 @using Feel.Shared.Enum
+@using Feel.Components.Form
