--- a/Feel/Components/Assistant/AssistantMessage.razor
+++ b/Feel/Components/Assistant/AssistantMessage.razor
@@ -1,4 +1,11 @@
-﻿<div class="@($"assistente-{ActionClass} {CssClass} bg-{MainTheme}-messaggi-bg")" @onclick="OnActionClick">
-<span class="@($"message-text text-{MainTheme}-messaggi-testo")">@ActionText</span>
+﻿<div @onclick="Action">
+
+@if(AssistantChoice is ModalType.AggiungiObiettivo)
+{   
+<Modal ActionClass="@ActionClass" CssClass="@CssClass" ActionText="@ActionText" ModalId="@ModalId" ModalType="AssistantChoice">
+<AddObiettivo @ref="_addObiettivo"/>
+</Modal>
+}
 </div>
+
 
