--- a/Feel/Components/Assistant/Assistente.razor
+++ b/Feel/Components/Assistant/Assistente.razor
@@ -1,8 +1,5 @@
-﻿<AssistantMessage Action="AssistantMessageEnum.AggiungiObiettivo" CssClass="@($"{WhoIs} {ShowMessages}")" OnActionClick="AddObiettivoPopUp"/>
-<AssistantMessage Action="AssistantMessageEnum.CambiaTema" CssClass="@($"{WhoIs} {ShowMessages}")" />
-<AssistantMessage Action="AssistantMessageEnum.AreaUtente" CssClass="@($"{WhoIs} {ShowMessages}")" />
-<AssistantMessage Action="AssistantMessageEnum.About" CssClass="@($"{WhoIs} {ShowMessages}")" />
+﻿<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="addObiettivo" AssistantChoice="ModalType.AggiungiObiettivo" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="cambiaTema" AssistantChoice="ModalType.CambiaTema" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="areaUtente" AssistantChoice="ModalType.AreaUtente" SitAssistant="SitAssistant" />
+<AssistantMessage CssClass="@($"{WhoIs} {ShowMessages}")" ModalId="about" AssistantChoice="ModalType.InformazioniApp" SitAssistant="SitAssistant" />
 <img class="assistente" src="@($"/css/images/Assistenti/{IsSelectedClass}-{AssistenteNome}")" @onclick="PadOnAssistant"/>
-
-
-    <AddObiettivo @ref="_addObiettivo"/>
