--- a/Feel/Components/Form/FormNumberDecimal.razor
+++ b/Feel/Components/Form/FormNumberDecimal.razor
@@ -11,6 +11,6 @@
         {
             <label for="@InputId">@LabelTitle</label>
         }
-        <InputText Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" placeholder="@Placeholder" id="@InputId" />
+        <InputNumber Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" id="@InputId" placeholder="@Placeholder" />
     </div>
 </div>
