--- a/Feel/wwwroot/css/partials/_form.scss
+++ b/Feel/wwwroot/css/partials/_form.scss
@@ -1,4 +1,4 @@
-﻿@mixin theme-settings($border, $label-text, $label-bg, $input-text) {
+﻿@mixin theme-settings($border, $label-text, $label-bg, $input-text, $text-disabled) {
     position: relative;
     width: 100%;
 
@@ -12,6 +12,10 @@
         transform: translateY(-50%);
         font-size: 0.8rem;
         box-shadow: 0 0 5px 2px rgba($label-bg, 0.5);
+
+        & span {
+            margin-left: 0.2rem;
+        }
     }
 
     & input {
@@ -24,10 +28,9 @@
         color: $input-text;
 
         &::placeholder {
-            color: $input-text;
-            opacity: 0.7;
+            color: $text-disabled;
         }
-       
+
 
         &:focus {
             outline: none;
@@ -35,10 +38,76 @@
             box-shadow: 0 0 5px 2px rgba($border, 0.5);
         }
     }
+
+    & select {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        width: 100%;
+        padding: 0.8rem 1.5em 0.5rem;
+        font-size: 0.9rem;
+        border: 1px solid $border;
+        border-radius: 5px;
+        background-color: transparent;
+        color: $input-text;
+
+        &::placeholder {
+            color: $input-text;
+            opacity: 0.7;
+        }
+
+
+        &:focus {
+            outline: none;
+            border: 2px solid $border;
+            box-shadow: 0 0 5px 2px rgba($border, 0.5);
+        }
+
+        & option {
+            color: $label-text;
+            background-color: $label-bg;
+        }
+    }
+
 }
 
-.form-group {
-    &.caldo {
-        @include theme-settings($caldo-input-border, $caldo-label, $caldo-offcanvas-bg, $caldo-input-text);
+@mixin check-form($label-text) {
+    display: flex;
+    flex-direction: column;
+
+    & label {
+        color: $label-text;
+        font-size: 0.8rem;
+
+        & span {
+            margin-left: 0.2rem;
+        }
+    }
+}
+
+.form-display {
+    gap: 2rem;
+    margin-top: 1.5rem !important;
+
+    @include media-query($bs-md) {
+        gap: 0;
+        margin-top: 1rem !important;
+        margin-inline: 1rem !important;
+
+        & div {
+            margin-bottom: 1rem !important;
+        }
+    }
+
+    & .form-group {
+        &.caldo {
+            @include theme-settings($caldo-input-border, $caldo-label, $caldo-offcanvas-bg, $caldo-input-text, $caldo-input-text-disabled);
+        }
+    }
+
+    & .form-group-check {
+        &.caldo {
+            @include check-form($caldo-label);
+        }
     }
 }
