--- a/Feel/wwwroot/css/partials/_mixins.scss
+++ b/Feel/wwwroot/css/partials/_mixins.scss
@@ -22,6 +22,22 @@
     }
 }
 
+@mixin top-appear($time) {
+    animation: top-appear $time ease-in-out forwards;
+
+    @keyframes top-appear {
+        from {
+            opacity: 0;
+            transform: translateY(-50%);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+}
+
 @mixin appear-translate($time) {
     animation: appear-translate $time ease-in-out forwards;
 
