--- a/Feel/Components/Form/EnumSelector.razor
+++ b/Feel/Components/Form/EnumSelector.razor
@@ -30,5 +30,5 @@
     }
 </InputSelect>
     </div>
-    @ChildContent
+    <ValidationMessage For="ValueExpression" class="@($"error-message {MainTheme}")" />
 </div>
