--- a/Feel/Components/Form/FormCheck.razor
+++ b/Feel/Components/Form/FormCheck.razor
@@ -17,4 +17,5 @@
             </div>
         </div>
     </div>
+    <ValidationMessage For="ValueExpression" class="@($"error-message {MainTheme}")" />
 </div>
