--- a/Feel/Components/ProgressCard.razor
+++ b/Feel/Components/ProgressCard.razor
@@ -1,10 +1,11 @@
-﻿
-@if(Model.Obiettivi is not null)
+﻿@inherits MainClassBase
+
+@if(Obiettivi is not null)
 {   
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 gap-2 gap-md-0">
 
-            @foreach(var obiettivo in Model.Obiettivi)
+            @foreach(var obiettivo in Obiettivi)
             {
              <div class="col recap-box">
                     <div class="row progress-bar-section">
