--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -974,6 +974,9 @@ main .main-section {
   background-color: transparent;
   color: #fff;
 }
+.form-display .form-group.caldo input::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
 .form-display .form-group.caldo input::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
@@ -1017,6 +1020,17 @@ main .main-section {
 }
 .form-display .form-group-check.caldo label span {
   margin-left: 0.2rem;
+}
+
+.error-message.caldo {
+  color: #F6DCA1;
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  font-style: italic;
+}
+.error-message.caldo::before {
+  content: "⚠️ ";
+  margin-right: 0.2rem;
 }
 
 .tooltip-container.caldo {
@@ -1102,6 +1116,7 @@ main .main-section {
   --bs-caldo-submit: #F6DCA1;
   --bs-caldo-tooltip-bg: #F6DCA1;
   --bs-caldo-tooltip-text: #7E2A0C;
+  --bs-caldo-error-text: #F6DCA1;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -1126,6 +1141,7 @@ main .main-section {
   --bs-caldo-submit-rgb: 246, 220, 161;
   --bs-caldo-tooltip-bg-rgb: 246, 220, 161;
   --bs-caldo-tooltip-text-rgb: 126, 42, 12;
+  --bs-caldo-error-text-rgb: 246, 220, 161;
   --bs-primary-text-emphasis: rgb(5.2, 44, 101.2);
   --bs-secondary-text-emphasis: rgb(43.2, 46.8, 50);
   --bs-success-text-emphasis: rgb(10, 54, 33.6);
@@ -4453,6 +4469,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #7E2A0C;
 }
 
+.btn-caldo-error-text {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #F6DCA1;
+  --bs-btn-border-color: #F6DCA1;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(247.35, 225.25, 175.1);
+  --bs-btn-hover-border-color: rgb(246.9, 223.5, 170.4);
+  --bs-btn-focus-shadow-rgb: 209, 187, 137;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(247.8, 227, 179.8);
+  --bs-btn-active-border-color: rgb(246.9, 223.5, 170.4);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #F6DCA1;
+  --bs-btn-disabled-border-color: #F6DCA1;
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -4858,6 +4891,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #7E2A0C;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #7E2A0C;
+  --bs-gradient: none;
+}
+
+.btn-outline-caldo-error-text {
+  --bs-btn-color: #F6DCA1;
+  --bs-btn-border-color: #F6DCA1;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #F6DCA1;
+  --bs-btn-hover-border-color: #F6DCA1;
+  --bs-btn-focus-shadow-rgb: 246, 220, 161;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #F6DCA1;
+  --bs-btn-active-border-color: #F6DCA1;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #F6DCA1;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #F6DCA1;
   --bs-gradient: none;
 }
 
@@ -6598,6 +6648,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-caldo-tooltip-text-text-emphasis);
 }
 
+.alert-caldo-error-text {
+  --bs-alert-color: var(--bs-caldo-error-text-text-emphasis);
+  --bs-alert-bg: var(--bs-caldo-error-text-bg-subtle);
+  --bs-alert-border-color: var(--bs-caldo-error-text-border-subtle);
+  --bs-alert-link-color: var(--bs-caldo-error-text-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -7209,6 +7266,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-caldo-tooltip-text-bg-subtle);
   --bs-list-group-active-bg: var(--bs-caldo-tooltip-text-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-caldo-tooltip-text-text-emphasis);
+}
+
+.list-group-item-caldo-error-text {
+  --bs-list-group-color: var(--bs-caldo-error-text-text-emphasis);
+  --bs-list-group-bg: var(--bs-caldo-error-text-bg-subtle);
+  --bs-list-group-border-color: var(--bs-caldo-error-text-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-caldo-error-text-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-caldo-error-text-border-subtle);
+  --bs-list-group-active-color: var(--bs-caldo-error-text-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-caldo-error-text-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-caldo-error-text-text-emphasis);
 }
 
 .btn-close {
@@ -8811,6 +8881,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-caldo-tooltip-text-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-caldo-error-text {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-caldo-error-text-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9025,6 +9100,15 @@ textarea.form-control-lg {
 .link-caldo-tooltip-text:hover, .link-caldo-tooltip-text:focus {
   color: RGBA(101, 34, 10, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(101, 34, 10, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-caldo-error-text {
+  color: RGBA(var(--bs-caldo-error-text-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-caldo-error-text-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-caldo-error-text:hover, .link-caldo-error-text:focus {
+  color: RGBA(248, 227, 180, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(248, 227, 180, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -9522,6 +9606,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-caldo-tooltip-text-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-caldo-error-text {
+  --bs-focus-ring-color: rgba(var(--bs-caldo-error-text-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -9760,6 +9848,11 @@ textarea.form-control-lg {
 .border-caldo-tooltip-text {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-caldo-tooltip-text-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-caldo-error-text {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-caldo-error-text-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -10793,6 +10886,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-caldo-tooltip-text-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-caldo-error-text {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-caldo-error-text-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -11075,6 +11173,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-caldo-tooltip-text-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-caldo-error-text {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-caldo-error-text-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -11246,6 +11349,11 @@ textarea.form-control-lg {
 .bg-caldo-tooltip-text {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-caldo-tooltip-text-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-caldo-error-text {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-caldo-error-text-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
